ch_19_adv_features : associate v generic trait

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
@@ -2493,18 +2493,23 @@
     "\n",
     "### Ignoring Remaining Parts of a Value with `..`\n",
     "\n",
-    "With values that have many parts, we can use the .. syntax to use specific  \n",
-    "parts and ignore the rest, avoiding the need to list underscores for each  \n",
-    "ignored value. The .. pattern ignores any parts of a value that we haven’t  \n",
-    "explicitly matched in the rest of the pattern. In Listing 18-23, we have a  \n",
-    "Point struct that holds a coordinate in three-dimensional space. In the match  \n",
-    "expression, we want to operate only on the x coordinate and ignore the values  \n",
-    "in the y and z fields."
+    "With values that have many parts :  \n",
+    "- we can use the `..` syntax to use specific parts  \n",
+    "- and ignore the rest,  \n",
+    "- avoiding the need to list underscores for each ignored value.  \n",
+    "\n",
+    "The `..` pattern ignores any parts of a value that we haven’t explicitly  \n",
+    "matched in the rest of the pattern.  \n",
+    "\n",
+    "In Listing 18-23, we have a `Point` struct that holds a coordinate in  \n",
+    "three-dimensional space. In the match expression, we want to :  \n",
+    "- operate only on the `x` coordinate  \n",
+    "- and ignore the values in the `y` and `z` fields."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2524,7 +2529,7 @@
        "()"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2550,19 +2555,30 @@
    "source": [
     "> Listing 18-23: Ignoring all fields of a Point except for x by using ..\n",
     "\n",
-    "We list the x value and then just include the .. pattern. This is quicker than  \n",
-    "having to list y: _ and z: _, particularly when we’re working with structs that  \n",
-    "have lots of fields in situations where only one or two fields are relevant.\n",
+    "#### -- `..` lets us describe RANGES vs EACH individual values --\n",
     "\n",
-    "The syntax .. will expand to as many values as it needs to be. Listing 18-24  \n",
-    "shows how to use .. with a tuple.\n",
+    "We list the :  \n",
+    "\n",
+    "- `x` value and then  \n",
+    "- just include the `..` pattern.  \n",
+    "\n",
+    "This is quicker than having to list :  \n",
+    "\n",
+    "- `y: _` and  \n",
+    "- `z: _`,  \n",
+    "- particularly when we’re working with structs that have `lots of fields`  \n",
+    "- in situations where only `one or two fields` are relevant.\n",
+    "\n",
+    "The syntax `..` will expand to as many values as it needs to be.  \n",
+    "\n",
+    "Listing 18-24 shows how to use `..` with a `tuple`.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2582,7 +2598,7 @@
        "()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2604,15 +2620,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Listing 18-24: Matching only the first and last values in a tuple and ignoring \n",
-    "all other values\n",
+    "> Listing 18-24: Matching only the `first` and `last` values in a `tuple` and  \n",
+    "ignoring all other values\n",
     "\n",
-    "In this code, the first and last value are matched with first and last.  \n",
-    "The .. will match and ignore everything in the middle.\n",
+    "#### -- `..` will `expand` to FILL as many values as NEEDED --\n",
     "\n",
-    "However, using .. must be unambiguous. If it is unclear which values are  \n",
+    "In this code :  \n",
+    "- the `first` and `last` value  \n",
+    "- are matched with `first` and `last`.  \n",
+    "- The `..` will `expand to match`  \n",
+    "- and ignore everything in the middle.\n",
+    "\n",
+    "However, using `..` must be unambiguous. If it is unclear which values are  \n",
     "intended for matching and which should be ignored, Rust will give us an error.  \n",
-    "Listing 18-25 shows an example of using .. ambiguously, so it will not compile.\n",
+    "Listing 18-25 shows an example of using `..` ambiguously, so it will not  \n",
+    "compile.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -2634,7 +2656,7 @@
       "\u001b[31mError:\u001b[0m `..` can only be used once per tuple pattern",
       "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_5:1:1\u001b[38;5;246m]\u001b[0m",
       "   \u001b[38;5;246m│\u001b[0m",
-      " \u001b[38;5;246m5 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;100m.\u001b[0m\u001b[38;5;100m.\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54m.\u001b[0m\u001b[38;5;54m.\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m=\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m9 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;100m.\u001b[0m\u001b[38;5;100m.\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54m.\u001b[0m\u001b[38;5;54m.\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m=\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
       " \u001b[38;5;246m  ·\u001b[0m          \u001b[38;5;100m─\u001b[0m\u001b[38;5;100m┬\u001b[0m          \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m  ",
       " \u001b[38;5;246m  ·\u001b[0m           \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m previously used here",
       " \u001b[38;5;246m  ·\u001b[0m                       \u001b[38;5;54m│\u001b[0m  ",
@@ -2648,6 +2670,10 @@
     "    let numbers = (2, 4, 8, 16, 32);\n",
     "\n",
     "    match numbers {\n",
+    "        // Compiler error because too many possible grouping\n",
+    "        // - ignore 2, bind 'second' to 4, and ignore 8, 16, 32 ?\n",
+    "        // - ignore 2, 4 bind 'second' to 8, and ignore 16, 32 ?\n",
+    "        // - ...etc\n",
     "        (.., second, ..) => {\n",
     "            println!(\"Some numbers: {}\", second);\n",
     "        }\n",
@@ -2677,13 +2703,22 @@
     "error: could not compile `patterns` due to previous error\n",
     "```\n",
     "\n",
-    "It’s impossible for Rust to determine how many values in the tuple to ignore  \n",
-    "before matching a value with second and then how many further values to ignore  \n",
-    "thereafter. This code could mean that we want to ignore 2, bind second to 4,  \n",
-    "and then ignore 8, 16, and 32; or that we want to ignore 2 and 4, bind second  \n",
-    "to 8, and then ignore 16 and 32; and so forth. The variable name second doesn’t  \n",
-    "mean anything special to Rust, so we get a compiler error because using .. in  \n",
-    "two places like this is ambiguous."
+    "#### -- COMPILER ERROR : When multiple `..` AMBIGOUS groups are possible  --\n",
+    "\n",
+    "It’s impossible for Rust to determine : \n",
+    "\n",
+    "- how many `values` in the `tuple` to ignore  \n",
+    "- before matching a value with `second`  \n",
+    "- and then how many `further values` to ignore thereafter.  \n",
+    "\n",
+    "This code could mean that we want to :  \n",
+    "- ignore 2, bind `second` to 4, and then ignore 8, 16, and 32;  \n",
+    "- or that we want to ignore 2 and 4, bind `second` to 8, and then ignore  \n",
+    "16 and 32;  \n",
+    "- and so forth.  \n",
+    "\n",
+    "The variable name `second` doesn’t mean anything special to Rust, so we get a  \n",
+    "compiler error because using `..` in two places like this is ambiguous."
    ]
   },
   {
@@ -2692,18 +2727,27 @@
    "source": [
     "### Extra Conditionals with Match Guards\n",
     "\n",
-    "A match guard is an additional if condition, specified after the pattern in a  \n",
-    "match arm, that must also match for that arm to be chosen. Match guards are  \n",
-    "useful for expressing more complex ideas than a pattern alone allows.\n",
+    "A `match guard` is :  \n",
     "\n",
-    "The condition can use variables created in the pattern. Listing 18-26 shows a  \n",
-    "match where the first arm has the pattern Some(x) and also has a match guard of  \n",
-    "if x % 2 == 0 (which will be true if the number is even)."
+    "- an additional `if` condition,  \n",
+    "- specified after the pattern in a `match arm`, \n",
+    "- that `must also match` for that arm to be chosen.  \n",
+    "\n",
+    "Match guards are useful for expressing more complex ideas than a pattern alone  \n",
+    "allows.\n",
+    "\n",
+    "The condition can use variables created in the pattern. \n",
+    "\n",
+    "> Listing 18-26 shows a match where :  \n",
+    "\n",
+    "- the first arm has the pattern `Some(x)`  \n",
+    "- and also has a `match guard` of `if x % 2 == 0`  \n",
+    "- (which will be true if the number is even)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2723,7 +2767,7 @@
        "()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,20 +2801,35 @@
    "source": [
     "> Listing 18-26: Adding a match guard to a pattern\n",
     "\n",
-    "This example will print The number 4 is even. When num is compared to the  \n",
-    "pattern in the first arm, it matches, because Some(4) matches Some(x). Then the  \n",
-    "match guard checks whether the remainder of dividing x by 2 is equal to 0, and  \n",
-    "because it is, the first arm is selected.\n",
+    "This example will : \n",
     "\n",
-    "If num had been Some(5) instead, the match guard in the first arm would have  \n",
-    "been false because the remainder of 5 divided by 2 is 1, which is not equal  \n",
-    "to 0. Rust would then go to the second arm, which would match because the  \n",
-    "second arm doesn’t have a match guard and therefore matches any Some variant.\n",
+    "- `print The number 4 is even`.  \n",
+    "- When `num` is compared to the pattern in the first arm,  \n",
+    "- it matches, because `Some(4)` matches `Some(x)`.  \n",
+    "- Then the match guard checks whether the `remainder` of  \n",
+    "- `dividing x by 2` is `equal to 0`,  \n",
+    "- and because it is, the first `arm is selected`\n",
     "\n",
-    "There is no way to express the if x % 2 == 0 condition within a pattern, so the  \n",
-    "match guard gives us the ability to express this logic. The downside of this  \n",
-    "additional expressiveness is that the compiler doesn't try to check for  \n",
-    "exhaustiveness when match guard expressions are involved.\n",
+    "If `num` had been `Some(5)` instead :  \n",
+    "\n",
+    "- the match guard in the first arm would have been false  \n",
+    "- because the `remainder of 5 divided by 2 is 1`,  \n",
+    "- which is not equal to 0.  \n",
+    "- Rust would then go to the `second arm`,  \n",
+    "- which would match because the second arm doesn’t have a match guard  \n",
+    "- and therefore matches any `Some` variant.\n",
+    "\n",
+    "#### -- Match Guard enables more EXPRESSIVE filters --\n",
+    "\n",
+    "There is no way to express the :  \n",
+    "- `if x % 2 == 0` condition within a pattern,  \n",
+    "- so the `match guard` gives us the ability to express this logic.  \n",
+    "\n",
+    "#### -- Compiler skips check for EXHAUSTIVENESS with Match Guard --\n",
+    "\n",
+    "The downside of this additional expressiveness is that : \n",
+    "- the compiler doesn't try to check for exhaustiveness  \n",
+    "- when match guard expressions are involved.\n",
     "\n",
     "In Listing 18-11, we mentioned that we could use match guards to solve our  \n",
     "pattern-shadowing problem. Recall that we created a new variable inside the  \n",
