ch_18_pmatching - refeed 4 match guard

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -1103,6 +1103,562 @@
     "use unsafe code, you can do so, and having the explicit unsafe annotation makes  \n",
     "it easier to track down the source of problems when they occur."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Advanced Traits\n",
+    "---\n",
+    "\n",
+    "We first covered traits in the “Traits: Defining Shared Behavior” section of  \n",
+    "Chapter 10, but we didn’t discuss the more advanced details. Now that you know  \n",
+    "more about Rust, we can get into the nitty-gritty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Specifying PlaceHolder Types in Trait Definitions with Associated Types\n",
+    "\n",
+    "Associated types connect a type placeholder with a trait such that the trait  \n",
+    "method definitions can use these placeholder types in their signatures. The  \n",
+    "implementor of a trait will specify the concrete type to be used instead of the  \n",
+    "placeholder type for the particular implementation. That way, we can define a  \n",
+    "trait that uses some types without needing to know exactly what those types are  \n",
+    "until the trait is implemented.\n",
+    "\n",
+    "We’ve described most of the advanced features in this chapter as being rarely  \n",
+    "needed. Associated types are somewhere in the middle: they’re used more rarely  \n",
+    "than features explained in the rest of the book but more commonly than many of  \n",
+    "the other features discussed in this chapter.\n",
+    "\n",
+    "One example of a trait with an associated type is the Iterator trait that the  \n",
+    "standard library provides. The associated type is named Item and stands in for  \n",
+    "the type of the values the type implementing the Iterator trait is iterating  \n",
+    "over. The definition of the Iterator trait is as shown in Listing 19-12."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pub trait Iterator {\n",
+    "    type Item;\n",
+    "\n",
+    "    fn next(&mut self) -> Option<Self::Item>;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-12: The definition of the Iterator trait that has an associated type  \n",
+    "Item\n",
+    "\n",
+    "The type Item is a placeholder, and the next method’s definition shows that it  \n",
+    "will return values of type Option<Self::Item>. Implementors of the Iterator  \n",
+    "trait will specify the concrete type for Item, and the next method will return  \n",
+    "an Option containing a value of that concrete type.\n",
+    "\n",
+    "Associated types might seem like a similar concept to generics, in that the  \n",
+    "latter allow us to define a function without specifying what types it can  \n",
+    "handle. To examine the difference between the two concepts, we’ll look at an  \n",
+    "implementation of the Iterator trait on a type named Counter that specifies the  \n",
+    "Item type is u32:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct Counter {}\n",
+    "\n",
+    "impl Iterator for Counter {\n",
+    "    type Item = u32;\n",
+    "\n",
+    "    fn next(&mut self) -> Option<Self::Item> {\n",
+    "        // --snip--\n",
+    "        None\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This syntax seems comparable to that of generics. So why not just define the  \n",
+    "Iterator trait with generics, as shown in  \n",
+    "\n",
+    "> Listing 19-13?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "type `Item` is not a member of trait `Iterator`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0437] Error:\u001b[0m type `Item` is not a member of trait `Iterator`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "missing generics for trait `Iterator`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0107] Error:\u001b[0m missing generics for trait `Iterator`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "associated type `Item` not found for `Self`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0220] Error:\u001b[0m associated type `Item` not found for `Self`"
+     ]
+    }
+   ],
+   "source": [
+    "pub trait Iterator<T> {\n",
+    "    fn next(&mut self) -> Option<T>;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-13: A hypothetical definition of the Iterator trait using generics\n",
+    "\n",
+    "The difference is that when using generics, as in Listing 19-13, we must  \n",
+    "annotate the types in each implementation; because we can also implement  \n",
+    "Iterator<String> for Counter or any other type, we could have multiple  \n",
+    "implementations of Iterator for Counter. In other words, when a trait has a  \n",
+    "generic parameter, it can be implemented for a type multiple times, changing  \n",
+    "the concrete types of the generic type parameters each time. When we use the  \n",
+    "next method on Counter, we would have to provide type annotations to indicate  \n",
+    "which implementation of Iterator we want to use.\n",
+    "\n",
+    "With associated types, we don’t need to annotate types because we can’t  \n",
+    "implement a trait on a type multiple times. In Listing 19-12 with the  \n",
+    "definition that uses associated types, we can only choose what the type of  \n",
+    "Item will be once, because there can only be one impl Iterator for Counter. We  \n",
+    "don’t have to specify that we want an iterator of u32 values everywhere that we  \n",
+    "call next on Counter.\n",
+    "\n",
+    "Associated types also become part of the trait’s contract:  \n",
+    "- implementors of the trait must provide a type to stand in for the associated  \n",
+    "type placeholder. Associated types often have a name that describes how the  \n",
+    "type will be used, and documenting the associated type in the API documentation  \n",
+    "is good practice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default Generic Type Parameters and Operator Overloading\n",
+    "\n",
+    "When we use generic type parameters, we can specify a default concrete type for  \n",
+    "the generic type. This eliminates the need for implementors of the trait to  \n",
+    "specify a concrete type if the default type works. You specify a default type  \n",
+    "when declaring a generic type with the <PlaceholderType=ConcreteType> syntax.\n",
+    "\n",
+    "A great example of a situation where this technique is useful is with operator  \n",
+    "overloading, in which you customize the behavior of an operator (such as +) in  \n",
+    "particular situations.\n",
+    "\n",
+    "Rust doesn’t allow you to create your own operators or overload arbitrary  \n",
+    "operators. But you can overload the operations and corresponding traits listed  \n",
+    "in std::ops by implementing the traits associated with the operator. For  \n",
+    "example, in Listing 19-14 we overload the + operator to add two Point instances  \n",
+    "together. We do this by implementing the Add trait on a Point struct:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::ops::Add;\n",
+    "\n",
+    "#[derive(Debug, Copy, Clone, PartialEq)]\n",
+    "struct Point {\n",
+    "    x: i32,\n",
+    "    y: i32,\n",
+    "}\n",
+    "\n",
+    "impl Add for Point {\n",
+    "    type Output = Point;\n",
+    "\n",
+    "    fn add(self, other: Point) -> Point {\n",
+    "        Point {\n",
+    "            x: self.x + other.x,\n",
+    "            y: self.y + other.y,\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    assert_eq! {\n",
+    "        Point { x: 1, y: 0 } + Point { x: 2, y: 3 },\n",
+    "        Point { x: 3, y: 3 }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-14: Implementing the Add trait to overload the + operator for  \n",
+    "Point instances\n",
+    "\n",
+    "The add method :  \n",
+    "\n",
+    "- adds the x values of two Point instances  \n",
+    "- and the y values of two Point instances  \n",
+    "- to create a new Point.  \n",
+    "\n",
+    "The Add trait has an associated type named Output that determines the type  \n",
+    "returned from the add method.\n",
+    "\n",
+    "The default generic type in this code is within the Add trait. Here is its  \n",
+    "definition:\n",
+    "\n",
+    "```rust\n",
+    "trait Add<Rhs=Self> {\n",
+    "    type Output;\n",
+    "\n",
+    "    fn add(self, rhs: Rhs) -> Self::Output;\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This code should look generally familiar: a trait with one method and an  \n",
+    "associated type. The new part is Rhs=Self: this syntax is called default  \n",
+    "type parameters. The Rhs generic type parameter (short for “right hand side”)  \n",
+    "defines the type of the rhs parameter in the add method. If we don’t specify a  \n",
+    "concrete type for Rhs when we implement the Add trait, the type of Rhs will  \n",
+    "default to Self, which will be the type we’re implementing Add on.\n",
+    "\n",
+    "When we implemented Add for Point, we used the default for Rhs because we  \n",
+    "wanted to add two Point instances. Let’s look at an example of implementing the  \n",
+    "Add trait where we want to customize the Rhs type rather than using the default.\n",
+    "\n",
+    "We have two structs, Millimeters and Meters, holding values in different units.  \n",
+    "This thin wrapping of an existing type in another struct is known as the  \n",
+    "newtype pattern, which we describe in more detail in the “Using the Newtype  \n",
+    "Pattern to Implement External Traits on External Types” section. We want to add  \n",
+    "values in millimeters to values in meters and have the implementation of Add do  \n",
+    "the conversion correctly. We can implement Add for Millimeters with Meters as  \n",
+    "the Rhs, as shown in Listing 19-15.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::ops::Add;\n",
+    "\n",
+    "struct Millimeters(u32);\n",
+    "struct Meters(u32);\n",
+    "\n",
+    "// impl block for the Add trait for : \n",
+    "// - the Millimeters struct\n",
+    "// - when adding a Meters struct\n",
+    "impl Add<Meters> for Millimeters {\n",
+    "    // we want to return millimeters ...\n",
+    "    type Output = Millimeters;\n",
+    "\n",
+    "    // when adding other(Meters) to self(Millimeters)\n",
+    "    fn add(self, other: Meters) -> Millimeters {\n",
+    "        // we return a new Millimeters struct\n",
+    "        Millimeters(self.0 + (other.0 * 1000)) // 1 meter = 1000 millimeters\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-15: Implementing the Add trait on Millimeters to add Millimeters to  \n",
+    "Meters\n",
+    "\n",
+    "To add Millimeters and Meters, we specify impl Add<Meters> to set the value of  \n",
+    "the Rhs type parameter instead of using the default of Self.\n",
+    "\n",
+    "You’ll use default type parameters in two main ways:\n",
+    "\n",
+    "- To extend a type without breaking existing code\n",
+    "- To allow customization in specific cases most users won’t need\n",
+    "\n",
+    "The standard library’s Add trait is an example of the second purpose:  \n",
+    "\n",
+    "- usually, you’ll add two like types,  \n",
+    "- but the Add trait provides the ability to customize beyond that.  \n",
+    "\n",
+    "Using a default type parameter in the Add trait definition means you don’t have  \n",
+    "to specify the extra parameter most of the time. In other words, a bit of  \n",
+    "implementation boilerplate isn’t needed, making it easier to use the trait.\n",
+    "\n",
+    "The first purpose is similar to the second but in reverse: if you want to add a  \n",
+    "type parameter to an existing trait, you can give it a default to allow  \n",
+    "extension of the functionality of the trait without breaking the existing  \n",
+    "implementation code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fully Qualified Syntax for Disambiguation: Calling Methods with the Same Name\n",
+    "\n",
+    "Nothing in Rust prevents a trait from having a method with the same name as  \n",
+    "another trait’s method, nor does Rust prevent you from implementing both traits  \n",
+    "on one type. It’s also possible to implement a method directly on the type with  \n",
+    "the same name as methods from traits.\n",
+    "\n",
+    "When calling methods with the same name, you’ll need to tell Rust which one you  \n",
+    "want to use. Consider the code in Listing 19-16 where we’ve defined two traits,  \n",
+    "Pilot and Wizard, that both have a method called fly. We then implement both  \n",
+    "traits on a type Human that already has a method named fly implemented on it.  \n",
+    "Each fly method does something different.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "trait Pilot {\n",
+    "    fn fly(&self);\n",
+    "}\n",
+    "\n",
+    "trait Wizard {\n",
+    "    fn fly(&self);\n",
+    "}\n",
+    "\n",
+    "struct Human;\n",
+    "\n",
+    "impl Pilot for Human {\n",
+    "    fn fly(&self) {\n",
+    "        println!(\"This is your captain speaking.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Wizard for Human {\n",
+    "    fn fly(&self) {\n",
+    "        println!(\"Up!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Human {\n",
+    "    fn fly(&self) {\n",
+    "        println!(\"*waving arms furiously*\");\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-16: Two traits are defined to have a fly method and are implemented  \n",
+    "on the Human type, and a fly method is implemented on Human directly\n",
+    "\n",
+    "When we call fly on an instance of Human, the compiler defaults to calling the  \n",
+    "method that is directly implemented on the type, as shown in Listing 19-17.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*waving arms furiously*\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let person = Human;\n",
+    "    person.fly();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-17: Calling fly on an instance of Human\n",
+    "\n",
+    "Running this code will print *waving arms furiously*, showing that Rust called  \n",
+    "the fly method implemented on Human directly.\n",
+    "\n",
+    "To call the fly methods from either the Pilot trait or the Wizard trait, we  \n",
+    "need to use more explicit syntax to specify which fly method we mean.  \n",
+    "\n",
+    "> Listing 19-18 demonstrates this syntax.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is your captain speaking.\n",
+      "Up!\n",
+      "*waving arms furiously*\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let person = Human;\n",
+    "    Pilot::fly(&person);\n",
+    "    Wizard::fly(&person);\n",
+    "    person.fly();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-18: Specifying which trait’s fly method we want to call\n",
+    "\n",
+    "Specifying the trait name before the method name clarifies to Rust which  \n",
+    "implementation of fly we want to call. We could also write Human::fly(&person),  \n",
+    "which is equivalent to the person.fly() that we used in Listing 19-18, but this  \n",
+    "is a bit longer to write if we don’t need to disambiguate.\n",
+    "\n",
+    "Running this code prints the following:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling traits-example v0.1.0 (file:///projects/traits-example)\n",
+    "    Finished dev [unoptimized + debuginfo] target(s) in 0.46s\n",
+    "     Running `target/debug/traits-example`\n",
+    "This is your captain speaking.\n",
+    "Up!\n",
+    "*waving arms furiously*\n",
+    "```\n",
+    "\n",
+    "Because the fly method takes a self parameter, if we had two types that both  \n",
+    "implement one trait, Rust could figure out which implementation of a trait to  \n",
+    "use based on the type of self.\n",
+    "\n",
+    "However, associated functions that are not methods don’t have a self parameter.  \n",
+    "When there are multiple types or traits that define non-method functions with  \n",
+    "the same function name, Rust doesn't always know which type you mean unless you  \n",
+    "use fully qualified syntax. For example, in Listing 19-19 we create a trait for  \n",
+    "an animal shelter that wants to name all baby dogs Spot. We make an Animal trait  \n",
+    "with an associated non-method function baby_name. The Animal trait is  \n",
+    "implemented for the struct Dog, on which we also provide an associated  \n",
+    "non-method function baby_name directly.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
   }
  ],
  "metadata": {
